prevent festival links to function, performance supportes spacing

--- a/public/stylesheets/compiled.css
+++ b/public/stylesheets/compiled.css
@@ -3480,7 +3480,7 @@ a.logo:hover {
 .supporter ul li {
   padding-left: 0;
   padding-right: 0;
-  margin: 0 2em 2em 0;
+  margin: 1em 2em 1em 0;
 }
 
 .news,
@@ -3706,6 +3706,10 @@ a.logo:hover {
   .select-cat .upcoming a {
     margin: 0;
   }
+}
+
+.single-image {
+  margin-bottom: 2em;
 }
 
 .address {
