--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -778,7 +778,7 @@ a.logo {
 		li {
 			padding-left: 0;
 			padding-right: 0;
-			margin: 0 2em 2em 0;
+			margin: 1em 2em 1em 0;
 		}
 	}
 }
